[package]
name = "bitcoin_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.17", features = ["derive"] }
cron = "0.12.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
